Add headers for PDFium consoles.
The header just contains the tree status.

Change-Id: Iaa68a31443cfbafce6d80effc46b849c656bb3dd

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -1,5 +1,10 @@
 logo_url: "https://storage.googleapis.com/chrome-infra/pdfium-logo.png"
 
+headers {
+  id: "pdfium"
+  tree_status_host: "pdfium-status.appspot.com"
+}
+
 consoles {
   id: "main"
   name: "PDFium Main Console"
@@ -7,6 +12,7 @@ consoles {
   refs: "refs/heads/master"
   manifest_name: "REVISION"
   include_experimental_builds: true
+  header_id: "pdfium"
 
   builders {
     name: "buildbucket/luci.pdfium.ci/android"
@@ -137,6 +143,7 @@ consoles {
   refs: "refs/heads/master"
   manifest_name: "REVISION"
   builder_view_only: true
+  header_id: "pdfium"
 
   builders {
     name: "buildbucket/luci.pdfium.try/android"
