Move all utf8 decoding under fx_string.h
Add tests, and fix one corner case involving 0xff.

Change-Id: Ib97540afdc708bcc6280a79c76734ec68ea72690

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -858,6 +858,8 @@ jumbo_static_library("fxcrt") {
     "core/fxcrt/cfx_seekablestreamproxy.h",
     "core/fxcrt/cfx_utf8decoder.cpp",
     "core/fxcrt/cfx_utf8decoder.h",
+    "core/fxcrt/cfx_utf8encoder.cpp",
+    "core/fxcrt/cfx_utf8encoder.h",
     "core/fxcrt/cfx_widetextbuf.cpp",
     "core/fxcrt/cfx_widetextbuf.h",
     "core/fxcrt/fileaccess_iface.h",
