Implement CFX_CodecMemory.
This class is much simpler than CFX_MemoryStream and does only what
CFX_BmpDecompressor and CFX_GifContext needs. Swap out CFX_MemoryStream
and remove CFX_MemoryStream::Seek().

BUG=pdfium:263

Change-Id: Ifd8ce4d2b6c9fedd6ec842d46f54fc8e654fbca7

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -824,6 +824,12 @@ jumbo_static_library("fxcodec") {
       ]
       deps += [ "third_party:fx_tiff" ]
     }
+    if (pdf_enable_xfa_bmp || pdf_enable_xfa_gif) {
+      sources += [
+        "core/fxcodec/codec/cfx_codec_memory.cpp",
+        "core/fxcodec/codec/cfx_codec_memory.h",
+      ]
+    }
   }
 }
 
