Add a way to save a barcode generated bitmap to a .png.
This is useful for debugging and validation purposes. The hashes that
are in BarcodeTest are not necessarily for valid outputs.

Bug: pdfium:1135
Change-Id: I6f1d70a4e133f8f04dbe52646087f99c448e95f8

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2933,6 +2933,7 @@ test("pdfium_unittests") {
     "testing/unit_test_main.cpp",
   ]
   deps = [
+    ":image_diff",
     ":pdfium",
     ":test_support",
     "//testing/gmock",
