--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1279,8 +1279,8 @@ jumbo_static_library("fxjs") {
       "fxjs/cjs_publicmethods.h",
       "fxjs/cjs_report.cpp",
       "fxjs/cjs_report.h",
-      "fxjs/cjs_return.cpp",
-      "fxjs/cjs_return.h",
+      "fxjs/cjs_result.cpp",
+      "fxjs/cjs_result.h",
       "fxjs/cjs_runtime.cpp",
       "fxjs/cjs_runtime.h",
       "fxjs/cjs_scalehow.cpp",
