Enable warnings for shadowed variables
This CL adds in the build flag that will throw a warning whenever a
variable is being shadowed. It also includes fixes for the ~20
locations this behaviour was occuring in the existing code.

BUG=pdfium:1137

Change-Id: I418d50de89ecbeb12e85b23a358bc61e8f16e888

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -17,7 +17,7 @@ group("freetype_common") {
 }
 
 config("pdfium_common_config") {
-  cflags = []
+  cflags = [ "-Wshadow" ]
   ldflags = []
   include_dirs = [ "." ]
   defines = [
