Enable warnings for shadowed variables
This CL adds in the build flag that will throw a warning whenever a
variable is being shadowed. It also includes fixes for the ~20
locations this behaviour was occuring in the existing code.

BUG=pdfium:1137

Change-Id: I418d50de89ecbeb12e85b23a358bc61e8f16e888

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -69,7 +69,11 @@ config("pdfium_common_config") {
 }
 
 config("pdfium_core_config") {
-  cflags = []
+  if (is_clang) {
+    cflags = [ "-Wshadow" ]
+  } else {
+    cflags = []
+  }
   configs = [ ":pdfium_common_config" ]
   defines = [ "V8_DEPRECATION_WARNINGS" ]
   if (is_linux) {
