--- a/BUILD.gn
+++ b/BUILD.gn
@@ -72,6 +72,9 @@ config("pdfium_core_config") {
   cflags = []
   configs = [ ":pdfium_common_config" ]
   defines = [ "V8_DEPRECATION_WARNINGS" ]
+  if (is_clang) {
+    cflags += [ "-Wshadow" ]
+  }
   if (is_linux) {
     if (current_cpu == "x64") {
       defines += [ "_FX_CPU_=_FX_X64_" ]
