Change explicit suppression of warning 4267 to a config based suppression.
BUG=588506

Change-Id: I347f2c98c6fd13679660fb25df2d2141e9b56e55

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -85,11 +85,11 @@ config("pdfium_core_config") {
   }
   if (is_win) {
     cflags += [
-      "/wd4267",
       "/wd4324",
       "/wd4577",
     ]
   }
+  configs += [ "//build/config/compiler:no_size_t_to_int_warning" ]
 }
 
 config("xfa_warnings") {
