Consolidate some common code in ccoded_progressivedecoder.
Small consolidation before trying to fix a memory issue.
Unfortunately, this involves converting a switch -> ifs, since we
no longer dispatch exactly the same.

Change-Id: I7ef61db98cdfbbc983adf21e7b3fe4ef1d2ce869

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -740,6 +740,7 @@ jumbo_static_library("fxcodec") {
     "core/fxcodec/codec/cjpx_decoder.h",
     "core/fxcodec/codec/codec_int.h",
     "core/fxcodec/codec/fx_codec.cpp",
+    "core/fxcodec/codec/icodec_module.h",
     "core/fxcodec/fx_codec.h",
     "core/fxcodec/fx_codec_def.h",
     "core/fxcodec/jbig2/JBig2_ArithDecoder.cpp",
