Introduce CodecModuleIface for progressive decoder modules.
Another step before trying to fix the memory issue. Forces common
APIs on the bunch of decoders, though some methods are unused.
Requires adding some arguments/return values to get to a common
API which are not used in all cases (yet). Required converting
some args to spans. Required proxying a GetJumpMark call through
the public module API to the private context.

Change-Id: I0c0b7415141ff2a6f4f44777ca3d05521f08130d

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -739,6 +739,7 @@ jumbo_static_library("fxcodec") {
     "core/fxcodec/codec/ccodec_scanlinedecoder.h",
     "core/fxcodec/codec/cjpx_decoder.h",
     "core/fxcodec/codec/codec_int.h",
+    "core/fxcodec/codec/codec_module_iface.h",
     "core/fxcodec/codec/fx_codec.cpp",
     "core/fxcodec/fx_codec.h",
     "core/fxcodec/fx_codec_def.h",
